tests/machine/x/fs/order_by_map.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:48:08Z
open System

type Anon1 = {
    a: int
    b: int
}
type Anon2 = {
    a: obj
    b: obj
}
let data: Anon1 list = [{ a = 1; b = 2 }; { a = 1; b = 1 }; { a = 0; b = 5 }]
let sorted: Anon1 list = [ for x in data do yield ({ a = x.a; b = x.b }, x) ] |> List.sortBy fst |> List.map snd
printfn "%A" sorted
